--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,12 +11,12 @@
         <ul class="navbar-nav">
           
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Marcas
             </a>
             <ul class="dropdown-menu">
               @for (cliente of lista_clientes; track cliente.id) {
-                <li><a class="dropdown-item" href="#">{{cliente.nombre}}</a></li>
+                <li><div class="dropdown-item" (click)="selectCliente(cliente.nombre)">{{cliente.nombre}}</div></li>
               }
             </ul>
           </li>
